Fix: path parameters
